Fixed font overflow

--- a/community.css
+++ b/community.css
@@ -36,12 +36,13 @@ main {
   align-items: center;
   background: rgb(255, 255, 255);
   padding: 0;
+  min-height: 100px;
 }
 
 .button h3 {
   display: inline-block;
   margin: 5px;
-  font-size: 2.9rem;
+  font-size: 1.8rem;
   font-weight: 900;
   margin: auto;
   padding: 10px;
@@ -66,7 +67,7 @@ main {
 
 .button:hover > .icon {
   background-color: #333;
-  width: 70%;
+  width: 60%;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.616);
 }
 
